--- a/KLQ/description
+++ b/KLQ/description
@@ -1,11 +1,11 @@
-Column Name   Description
-RA	          RA from GLQ database              
-DEC	          Dec from GLQ database              
-Name	        Name of lensed quasar from GLQ database              
-Clusterid	    Internel ID of our work (also provided in other catalogues that exist in this repo.)             
-z_qso	        The redshift of background quasar from GLQ database             
-z_lens	      The redshift of lens galaxy from GLQ database             
-N_images	    Number of images of lensed quasar from GLQ database            
-exist_in_VS	  Wether this lensed quasar exist in VS (51s out of 57s do)                
-S_RF	        One of the scores that measuring the probablity of a quasar candidate group being a quasar group
-S_colour      One of the scores that measuring the colour similarity of candidates within a quasar candidate group             
+Column Name, Description
+RA, RA from GLQ database              
+DEC, Dec from GLQ database              
+Name, Name of lensed quasar from GLQ database              
+Clusterid, Internel ID of our work (also provided in other catalogues that exist in this repo.)             
+z_qso, The redshift of background quasar from GLQ database             
+z_lens, The redshift of lens galaxy from GLQ database             
+N_images, Number of images of lensed quasar from GLQ database            
+exist_in_VS, Wether this lensed quasar exist in VS (51s out of 57s do)                
+S_RF, One of the scores that measuring the probablity of a quasar candidate group being a quasar group
+S_colour, One of the scores that measuring the colour similarity of candidates within a quasar candidate group             
