--- a/KLQ/description
+++ b/KLQ/description
@@ -1,3 +1,5 @@
+This catalogue contains 57 known lensed quasars from GLQ database that exist in QGC.
+
 Column Name, Description
 RA, RA from GLQ database              
 DEC, Dec from GLQ database              
