--- a/New_candidates/Catalogues/description
+++ b/New_candidates/Catalogues/description
@@ -1,1 +1,18 @@
+1. New_candidates.csv
+
+This catalogue contains 852 new lensed quasars candidates.
+
+Column Name, Description
+Clusterid, Internel ID of our work (also provided in other catalogues that exist in this repo.)   
+RA, Right Ascension (J2000)              
+DEC, Declination (J2000)        
+S_RF, One of the scores that measuring the probablity of a quasar candidate group being a quasar group
+S_colour, One of the scores that measuring the colour similarity of candidates within a quasar candidate group     
+Sep_max, Maximum image separation in arcsecond             
+Sep_min, Minimum image separation in arcseconds
+Sep_mean, Mean image separation in arcseconds             
+Grade, Grades of lensed quasar canidates (A, B, or C) given by the first author
+Grade_by_LR, Grades of lensed quasar canidates (A, B, or C) given by the fourth author                                
+N_images, Number of images of lensed quasar from GLQ database            
+Note, Comments on this lensed quasar candidate                     
 
