--- a/New_candidates/Images/description
+++ b/New_candidates/Images/description
@@ -1,1 +1,3 @@
-
+This dir contains the images of 852 new lensed quasars candidates.
+The images are shown by their grades. Since two inspectors graded the candidates, 
+the images are shown in two different dir to indicate the different grades that given by two inspectors.
