--- a/Candidates/Catalogues/description
+++ b/Candidates/Catalogues/description
@@ -3,22 +3,22 @@
 This catalogue contains 852 new lensed quasars candidates.
 
 Column Name, Description
-Clusterid, Internel ID of our work (also provided in other catalogues that exist in this repo.)   
+Clusterid, Internal ID of our work (also provided in other catalogues that exist in this repo.)   
 RA, Right Ascension (J2000) of the centre of lensed quasars candidates.
 DEC, Declination (J2000) of the centre of lensed quasars candidates.
-S_RF, One of the scores that measuring the probablity of a quasar candidate group being a quasar group
+S_RF, One of the scores that measuring the probability of a quasar candidate group being a quasar group
 S_colour, One of the scores that measuring the colour similarity of candidates within a quasar candidate group     
 Sep_max, Maximum image separation in arcsecond             
 Sep_min, Minimum image separation in arcseconds
 Sep_mean, Mean image separation in arcseconds             
-Grade, Grades of lensed quasar canidates (A, B, or C) given by the first author
-Grade_by_LR, Grades of lensed quasar canidates (A, B, or C) given by the fourth author                                
+Grade, Grades of lensed quasar candidates (A, B, or C) given by the first author
+Grade_by_LR, Grades of lensed quasar candidates (A, B, or C) given by the fourth author                                
 NUM_of_IMGs, Number of images
 exsit_in_KLQ, Whether this candidate exists in KLQ                
 exsit_in_D22, Whether this candidate exists in D22
-Grade_by_D22, Grades of lensed quasar canidates (A, B, or C) given in D22              
-q, axis ratio of SIE profile given by lens modelling               
-phi, position angle of SIE profile (+x-axis is zero, counterclockwise is positive) given by lens modelling               
+Grade_by_D22, Grades of lensed quasar candidates (A, B, or C) given in D22              
+q, axis ratio of SIE profile given by lens modeling               
+phi, position angle of SIE profile (+x-axis is zero, counterclockwise is positive) given by lens modeling               
 rein, Einstein radius  given by lens modelling               
 Note, Comments on this lensed quasar candidate                 
 
@@ -26,7 +26,7 @@ Note, Comments on this lensed quasar candidate
 
 This catalogue contains the every images (1715 in total) of 852 new lensed quasars candidates (compared to GLQ)
 
-Clusterid, Internel ID of our work (also provided in other catalogues that exist in this repo.) that this image belongs to.
+Clusterid, Internal ID of our work (also provided in other catalogues that exist in this repo.) that this image belongs to.
 RA, Right Ascension (J2000) of the centre of this image.
 Dec, Declination (J2000) of the centre of this image.
 g, g-band magnitude of this image.
