--- a/Candidates/Images/description
+++ b/Candidates/Images/description
@@ -1,3 +1,3 @@
 This dir contains the images of all 992 candidates, dividing in to two parts:
 1. All images                    
-2. The images is categorized by the overlaps with D22, L22, KLQ. Expect all overlaps, the others in H22 are putted in `New'.                 
+2. The images that are categorized by the overlaps with D22, L22, KLQ. Expect all overlaps, the others in H22 are putted in `New'.                 
